@@ -41,7 +41,7 @@ my $prereqs  = {
     'Pod::Xhtml' => '1.61',
     'Starman' => '0.3000',
     'Template' => '2.22',
-    'Text::Markdown' => '1.000031',
+    'Text::MultiMarkdown' => '1.000034',
     'Try::Tiny' => '0.18',
     'URI' => '1.60',
     'Unexpected' => 'v0.22.0',
