@@ -15,7 +15,7 @@ requires "Plack::Middleware::Session" => "0.21";
 requires "Pod::Xhtml" => "1.61";
 requires "Starman" => "0.3000";
 requires "Template" => "2.22";
-requires "Text::Markdown" => "1.000031";
+requires "Text::MultiMarkdown" => "1.000034";
 requires "Try::Tiny" => "0.18";
 requires "URI" => "1.60";
 requires "Unexpected" => "v0.22.0";
