@@ -20,7 +20,7 @@ Plack::Middleware::Session        = 0.21
 Pod::Xhtml        = 1.61
 Starman           = 0.3000
 Template          = 2.22
-Text::Markdown    = 1.000031
+Text::MultiMarkdown = 1.000034
 Try::Tiny         = 0.18
 URI               = 1.60
 Web::Simple       = 0.020
