@@ -30,7 +30,8 @@ I saw [Daux.io](https://github.com/justinwalsh/daux.io) on Github and it said
 
 ## Differences
 
-I exchanged the PHP for modern [Perl](http://www.perl.org), [Moo](https://metacpan.org/module/Moo),
+I exchanged the PHP for modern
+[Perl](http://www.perl.org), [Moo](https://metacpan.org/module/Moo),
 [Plack](https://metacpan.org/module/Plack), and
 [Web::Simple](https://metacpan.org/module/Web::Simple). Not a fan of Bootstrap
 so that went also. Prefer class based inheritance when JavaScript programming
@@ -52,12 +53,16 @@ installed.
 If you don't already have it, bootstrap
 [App::cpanminus](https://metacpan.org/module/App::cpanminus) with:
 
-   > curl -L http://cpanmin.us | perl - --sudo App::cpanminus
+```bash
+   curl -L http://cpanmin.us | perl - --sudo App::cpanminus
+```
 
 Then install [local::lib](https://metacpan.org/module/local::lib) with:
 
-   > cpanm --notest --local-lib=~/App-Doh local::lib && \  
+```bash
+   cpanm --notest --local-lib=~/App-Doh local::lib && \
       eval $(perl -I ~/App-Doh/lib/perl5/ -Mlocal::lib=~/App-Doh)
+```
 
 The second statement sets environment variables to include the local Perl
 library. You can append the output of the perl command to your shell startup
@@ -67,7 +72,9 @@ will fail, badly.
 
 Install **App-Doh** with:
 
-   > cpanm --notest git://github.com/pjfl/p5-app-doh.git
+```bash
+   cpanm --notest git://github.com/pjfl/p5-app-doh.git
+```
 
 Although this is a *simple* application it is composed of many CPAN
 distributions and, depending on how many of them are already available,
@@ -80,25 +87,33 @@ option.
 
 If that fails run it again with the --force option
 
-   > cpanm --force git:...
+```bash
+   cpanm --force git:...
+```
 
 By default the development server will run at:
 [http://localhost:5000](http://localhost:5000) and can be started in the
 foreground with:
 
-   > cd App-Doh  
-   > plackup bin/doh-server
+```bash
+   cd App-Doh
+   plackup bin/doh-server
+```
 
 To start the production server in the background listening on the default port
 8085 use:
 
-   > doh-daemon start
+```bash
+   doh-daemon start
+```
 
 The doh-daemon program provides normal SysV init script semantics.
 Additionally the daemon program will write an init script to standard output
 in response to the command:
 
-   > doh-daemon get_init_file
+```bash
+   doh-daemon get_init_file
+```
 
 ## Folders
 
@@ -154,11 +169,13 @@ folder. This file will then be used to create a landing page. You can
 also add a description and image to this page using the config file like
 this:
 
-   {  
-      "title": "Doh!",  
-      "description": "An Easiest Way To Document Your Project",  
-      "brand": "app.png"  
-   }  
+```json
+   {
+      "title": "Doh!",
+      "description": "An Easiest Way To Document Your Project",
+      "brand": "app.png"
+   }
+```
 
 ## Configuration
 
@@ -172,9 +189,11 @@ configuration attributes
 ### Title:
 Change the title bar in the docs
 
-   {  
-      "title": "Doh!"  
-   }  
+```json
+   {
+      "title": "Doh!"
+   }
+```
 
 ### Themes:
 We have 4 built-in colour themes. To use one of the themes, just
@@ -188,30 +207,34 @@ set the `theme` option to one of the following:
 You can set the theme option by appending '?theme=&lt;colour&gt;' to any URI.
 The value will persist once it has been set.
 
-   {  
-      "theme": "blue"  
-   }  
+```json
+   {
+      "theme": "blue"
+   }
+```
 
 ### Custom Theme:
 To create a custom color scheme, set the `theme` property to `custom`
 and then define the required colors. Copy the following configuration
 to get started:
 
-   {  
-      "theme": "custom",  
-      "colors": {  
-         "sidebar-background": "#f7f7f7",  
-         "sidebar-hover": "#c5c5cb",  
-         "lines": "#e7e7e9",  
-         "dark": "#3f4657",  
-         "light": "#82becd",  
-         "text": "#2d2d2d",  
-         "syntax-string": "#022e99",  
-         "syntax-comment": "#84989b",  
-         "syntax-number": "#2f9b92",  
-         "syntax-label": "#840d7a"  
-      }  
-   }  
+```json
+   {
+      "theme": "custom",
+      "colors": {
+         "sidebar-background": "#f7f7f7",
+         "sidebar-hover": "#c5c5cb",
+         "lines": "#e7e7e9",
+         "dark": "#3f4657",
+         "light": "#82becd",
+         "text": "#2d2d2d",
+         "syntax-string": "#022e99",
+         "syntax-comment": "#84989b",
+         "syntax-number": "#2f9b92",
+         "syntax-label": "#840d7a"
+      }
+   }
+```
 
 ### Code Floating:
 By deafult your code blocks will be floated to a column on the right
@@ -220,55 +243,68 @@ property to `false`, or add `?float=0` to any URI to store the choice
 in the preferences. Add `?float=1` to any URI to re-enable the
 feature
 
-   {  
-      "float": false  
-   }  
+```json
+   {
+      "float": false
+   }
+```
 
 ### Ignore:
 The config attribute `no_index` is a list of filename patterns to ignore
 when indexing the document tree
 
-   [ '.git', '.htpasswd', '.svn', 'app-doh.json' ]  
+```json
+   [ '.git', '.htpasswd', '.svn', 'app-doh.json' ]
+```
 
 ### Locales:
 The list of locales (languages) supported
 
-   {  
-      "locales": [ "en", "de" ]  
-   }  
+```json
+   {
+      "locales": [ "en", "de" ]
+   }
+```
 
 ### Github Repo:
 Add a 'Fork me on Github' ribbon.
 
-   {  
-      "repo_url": "https://github.com/pjfl/p5-app-doh.git"  
-   }  
+```json
+   {
+      "repo_url": "https://github.com/pjfl/p5-app-doh.git"
+   }
+```
 
 ### Twitter:
 Include twitter follow buttons in the sidebar.
 
-   {  
-      "twitter": [ "perl", "web-simple" ]  
-   }  
+```json
+   {
+      "twitter": [ "perl", "web-simple" ]
+   }
+```
 
 ### Links:
 Include custom links in the sidebar.
 
-   {  
-      "links": {  
-         "Download": "https://github.com/pjfl/p5-app-doh/archive/master.zip",  
-         "Github Repo": "https://github.com/pjfl/p5-app-doh.git",  
-         "Issues/Wishlist": "http://github.com/pjfl/p5-app-doh/issues"  
-      }  
-   }  
+```json
+   {
+      "links": {
+         "Download": "https://github.com/pjfl/p5-app-doh/archive/master.zip",
+         "Github Repo": "https://github.com/pjfl/p5-app-doh.git",
+         "Issues/Wishlist": "http://github.com/pjfl/p5-app-doh/issues"
+      }
+   }
+```
 
 ### Google Analytics:
 This will embed the Google Analytics tracking code.
 
-   {  
-      "analytics": "UA-XXXXXXXXX-XX"  
-   }  
-
+```json
+   {
+      "analytics": "UA-XXXXXXXXX-XX"
+   }
+```
 
 ## Toggling Code Blocks
 The select menu in the left column of the documentation template allows
@@ -295,25 +331,27 @@ terse error messages to be replaced with more user friendly ones.
 
 ### Directory structure:
 
-   ├── docs/  
-   │   ├── en/  
-   │   │   ├── index.md  
-   │   │   ├── 00_Getting_Started.md  
-   │   │   ├── 01_Examples/  
-   │   │   │   ├── 01_GitHub_Flavored_Markdown.md  
-   │   │   │   ├── 05_Code_Highlighting.md  
-   │   │   ├── 05_More_Examples/  
-   │   │   │   ├── Hello_World.md  
-   │   │   │   ├── 05_Code_Highlighting.md  
-   │   ├── de/  
-   │   │   ├── index.md  
-   │   │   ├── 00_Getting_Started.md  
-   │   │   ├── 01_Examples/  
-   │   │   │   ├── 01_GitHub_Flavored_Markdown.md  
-   │   │   │   ├── 05_Code_Highlighting.md  
-   │   │   ├── 05_More_Examples/  
-   │   │   │   ├── Hello_World.md  
-   │   │   │   ├── 05_Code_Highlighting.md  
+```
+   ├── docs/
+   │   ├── en/
+   │   │   ├── index.md
+   │   │   ├── 00_Getting_Started.md
+   │   │   ├── 01_Examples/
+   │   │   │   ├── 01_GitHub_Flavored_Markdown.md
+   │   │   │   ├── 05_Code_Highlighting.md
+   │   │   ├── 05_More_Examples/
+   │   │   │   ├── Hello_World.md
+   │   │   │   ├── 05_Code_Highlighting.md
+   │   ├── de/
+   │   │   ├── index.md
+   │   │   ├── 00_Getting_Started.md
+   │   │   ├── 01_Examples/
+   │   │   │   ├── 01_GitHub_Flavored_Markdown.md
+   │   │   │   ├── 05_Code_Highlighting.md
+   │   │   ├── 05_More_Examples/
+   │   │   │   ├── Hello_World.md
+   │   │   │   ├── 05_Code_Highlighting.md
+```
 
 ## Markdown Editor
 <img alt="[File editor]" class="app-thumbnail"
@@ -345,28 +383,34 @@ using `[\% links.assets %\]your-asset.jpg`, or from markdown as
 Only the green theme is precompiled, if you want the other colour themes then
 install Node, Lessc, and CSS::LESS. As root:
 
-   > apt-get update  
-   > apt-get install git-core curl build-essential openssl libssl-dev  
-   > git clone https://github.com/joyent/node.git  
-   > cd node  
-   > ./configure --openssl-libpath=/usr/lib/ssl  
-   > make  
-   > make install  
-   # Node installed with broken permissions which I had to fix at this point  
-   > npm install -g less  
+```bash
+   apt-get update
+   apt-get install git-core curl build-essential openssl libssl-dev
+   git clone https://github.com/joyent/node.git
+   cd node
+   ./configure --openssl-libpath=/usr/lib/ssl
+   make
+   make install
+   # Node installed with broken permissions which I had to fix at this point
+   npm install -g less
+```
 
 Now you should have a working `lessc` command. Create the other CSS files with
 (not as root):
 
-   > cpanm --force CSS::LESS  
-   > doh-cli make_css  
+```bash
+   cpanm --force CSS::LESS
+   doh-cli make_css
+```
 
 ## Generating a set of static files
 
 This command creates a static HTML version of the documentation in the
 `var/root/static` directory
 
-   > doh-cli make_static  
+```bash
+   doh-cli make_static
+```
 
 ## Support
 
